# yet-another-realtime-messenger

./: Makefile  README.md  TODO.md  docker-compose.dev-env.yml  docker-compose.dev.yml  docker-compose.yml
auth-service/: Makefile  docker-compose.test.yml  pyproject.toml
auth-service/app/: api.py  crud.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  middlewares.py  models.py  permissions.py  schemas.py  security.py  settings.py  utils.py
auth-service/config/: dev.env  example.env  test.env
auth-service/migrations/: env.py
auth-service/tests/: conftest.py  test_api_auth.py  test_crud.py  test_exceptions.py  test_jwt_revocation.py  test_models.py  test_security.py
chat-service/: Makefile  docker-compose.test.yml  pyproject.toml
chat-service/app/: __main__.py  api.py  crud.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  middlewares.py  models.py  schemas.py  security.py  settings.py
chat-service/config/: test.env
chat-service/tests/: conftest.py  test_api_chats.py  test_crud.py  test_jwt_revocation.py  (+2 more)
user-service/: .env.example  Dockerfile  Makefile  pyproject.toml
user-service/app/: api.py  config.py  crud.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  middlewares.py  models.py  schemas.py  security.py  settings.py
user-service/app/services/: file_upload_client.py
user-service/config/: dev.env  test.env
user-service/tests/: conftest.py  test_api.py  test_api_contacts.py  test_api_users.py  test_crud.py  test_exceptions.py  test_jwt_revocation.py  test_models.py  test_security.py
(+10 files in other folders)
